Prevent footer from overflowing at small screen sizes

--- a/src/routes/footer/index.css
+++ b/src/routes/footer/index.css
@@ -64,6 +64,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .social-links {
